Version update (all test passing)